<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:background="#3fb77b"
    android:orientation="vertical">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_marginTop="108dp"
        android:hint="@string/Location"
        android:background="@drawable/text_img"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:background="#3fb77b"
        android:layout_margin="14dp">


        <EditText
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_margin="9dp"
            android:background="@drawable/text_img"
            android:hint="@string/dis"
            android:layout_weight="0.01"
            android:padding="3dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/Alert_text"
            android:id="@+id/button"
            android:layout_margin="8dp"
            android:background="@drawable/button_img"
            android:layout_weight="0.06"
            android:onClick="onClick" />


    </LinearLayout>

</LinearLayout>
